--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -1,32 +1,32 @@
+# Clone the primary repository
+git clone https://github.com/CarlDeanClineSr/LUFT-Unified-Field-Project.git
 
-            - name: EkLine (GitHub Action)
-  # You may pin to the exact commit or the version.
-  # uses: ekline-io/ekline-github-action@5c6c6f04e7601b35bf058aef224fefc4fd90d79a            
-  
-    # GITHUB_TOKEN
-    github_token: # optional, default is ${{ github.token }}
-    # Working directory relative to the root directory.
-    workdir: # optional, default is .
-    # Report level for reviewdog [info,warning,error]
-    level: # optional, default is info
-    # Reporter of reviewdog command [github-pr-check,github-pr-review].
-    reporter: # optional, default is github-pr-check
-    # Filtering mode for the reviewdog command [added,diff_context,file,nofilter].
-Default is added.
+# Clone the other repositories
+git clone https://github.com/CarlDeanClineSr/Lattice-Unified-Field-Theory-L.U.F.T.git
+git clone https://github.com/CarlDeanClineSr/Chronological-Craft-Inventions-LUFT.git
+git clone https://github.com/CarlDeanClineSr/CarlDean-ClineSr2.git
+cd LUFT-Unified-Field-Project
+# Add Lattice-Unified-Field-Theory-L.U.F.T
+git remote add luft-theory ../Lattice-Unified-Field-Theory-L.U.F.T
+git fetch luft-theory
+git subtree add --prefix=research luft-theory main --squash
 
-    filter_mode: # optional, default is added
-    # Exit code for reviewdog when errors are found [true,false]
-Default is `false`.
+# Add Chronological-Craft-Inventions-LUFT
+git remote add luft-craft ../Chronological-Craft-Inventions-LUFT
+git fetch luft-craft
+git subtree add --prefix=notebooks luft-craft main --squash
 
-    fail_on_error: # optional, default is false
-    # Additional reviewdog flags
-    reviewdog_flags: # optional, default is 
-    # Token for EkLine application
-    ek_token: 
-    # Content directory relative to the root directory.
-    content_dir: # optional, default is .
-    # Ignore the rules that are passed in as comma seperated values (eg: EK1,EK4)
-    ignore_rule: # optional, default is 
-    # Enable AI suggestions
-    enable_ai_suggestions: # optional
-          
+# Add CarlDean-ClineSr2
+git remote add luft-experiments ../CarlDean-ClineSr2
+git fetch luft-experiments
+git subtree add --prefix=experimental luft-experiments main --squash
+# Create folders if they don’t already exist
+mkdir docs src data notebooks research experimental
+
+# Move files into their appropriate folders
+mv research/*.* research/
+mv notebooks/*.* notebooks/
+mv experimental/*.* experimental/
+git add .
+git commit -m "Merged repositories and organized structure"
+git push origin main
